# TRACE

./: .gitignore  Dockerfile.combined  README.md  docker-compose.yml  docker-entrypoint.sh
.argo/: trace-analytics-ci-workflowtemplate.yaml  trace-collector-ci-workflowtemplate.yaml  trace-compactor-ci-workflowtemplate.yaml  trace-flusher-ci-workflowtemplate.yaml  trace-syncer-ci-workflowtemplate.yaml
.beads/: issues.jsonl
analytics/: Cargo.toml  Dockerfile
analytics/queries/: attribution_analysis.sql  attribution_first_touch.sql  attribution_last_touch.sql  attribution_linear.sql  campaign_funnel.sql  cohort_journey.sql  common_paths.sql  core_ctr.sql  core_dwell_time.sql  core_funnel.sql  creative_combinations.sql  creative_fatigue.sql  cross_network_creatives.sql  ctr_by_campaign.sql  daily_summary.sql  drop_off_analysis.sql  funnel_with_paths.sql  hourly_traffic_pattern.sql  landing_page_performance.sql  network_comparison.sql  returning_user_analysis.sql  session_flow.sql  session_flow_matrix.sql  session_reconstruction.sql  top_headlines.sql  top_images.sql  traffic_spike_detection.sql  trending_campaigns.sql  user_journey.sql  zero_traffic_alert.sql
analytics/schemas/: ad_events_iceberg.sql  assets_iceberg.sql  iceberg_helper_views.sql  schema_migrations.sql  sessions_iceberg.sql
analytics/schemas/migrations/: README.md  V001__initial_schema.sql  V002__add_referrer_attribution.sql  V003__add_engagement_metrics.sql  V004__add_quality_scores.sql  migrate.py  requirements.txt
analytics/src/: config.rs  duckdb.rs  main.rs  queries.rs  reporter.rs  s3.rs  session_stitcher.rs  web.rs
analytics/static/: index.html
client/: README.md  build.js  build.sh  demo.html  package.json  pixel-example.html  tag-demo.html  tag.js  tag.min.js  trace.js  trace.min.js
collector/: .dockerignore  Cargo.toml  Dockerfile
collector/notes/: bf-29u.md
collector/src/: log_writer.rs  main.rs  normalizer.rs  queue.rs  validator.rs
compactor/: Cargo.toml  Dockerfile
compactor/src/: iceberg.rs  main.rs  metadata.rs
docs/analytics/: attribution_and_funnel_queries.md  cross_network_normalization.md  iceberg.md  iceberg_backward_compatibility.md  iceberg_partition_pruning.md  normalization.sql  queries.md
docs/plan/: plan.md
docs/syncer/: metrics_polling_worker.md
flusher/: Cargo.toml  Dockerfile
flusher/src/: main.rs  network_mapping.toml  normalizer.rs  raw_log_parser.rs
k8s/: analytics-configmap.yaml.template  analytics-cronjob.yaml  analytics-deployment.yaml  collector-deployment.yaml  collector-service.yaml  combined-deployment.yaml  combined-ingress.yaml  combined-service.yaml  compactor-cronjob.yaml  compactor-deployment.yaml  dlq-pvc.yaml  flusher-deployment.yaml  namespace.yaml  pvc.yaml  secret-s3.yaml.template
notes/: bf-1au.md  bf-1vs.md  bf-1yp8.md  bf-31z0.md  bf-3j4.md  bf-3s7.md  bf-3v9.md  bf-3zhr.md  bf-4mfy.md  bf-4mp.md  bf-4oav.md  bf-51j.md  bf-53h.md  bf-5ae.md  bf-5wy7.md  bf-5yq.md  bf-j0om.md  bf-qvk.md  bf-sl2j-verification.md  bf-sl2j.md
syncer/: Cargo.toml  Dockerfile
syncer/src/: api_client.rs  creative.rs  hierarchy.rs  main.rs  registry.rs  s3_store.rs  session_hierarchy.rs
