[package]
name = "trace-analytics"
version = "0.1.0"
edition = "2021"
description = "DuckDB analytics and report runner for TRACE"

[[bin]]
name = "trace-analytics"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.1", features = ["bundled"] }
rust-s3 = { version = "0.36", features = ["tokio-rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
handlebars = "6.2"
csv = "1.3"
tera = { version = "1.20", default-features = false }
glob = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
