[package]
name = "trace-collector"
version = "0.1.0"
edition = "2021"
description = "Lightweight event collector for TRACE tracking system"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
anyhow = "1.0"
redis = { version = "0.27", features = ["connection-manager", "tokio-comp"] }
async-trait = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
