[package]
name = "trace-compactor"
version = "0.1.0"
edition = "2021"
description = "Compaction service for TRACE - merges small Parquet files into larger partitions"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parquet = { version = "54", features = ["arrow", "async"] }
arrow = { version = "54", features = ["chrono-tz"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65"
aws-smithy-types = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
